src/main/gen/org/zig/psi/parser/ZigLangParser.java
// This is a generated file. Not intended for manual editing.
package org.zig.psi.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.zig.psi.ZigLangTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ZigLangParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // MultiplyExpr (AdditionOp MultiplyExpr)*
  public static boolean AdditionExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditionExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITION_EXPR, "<addition expr>");
    r = MultiplyExpr(b, l + 1);
    r = r && AdditionExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AdditionOp MultiplyExpr)*
  private static boolean AdditionExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditionExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AdditionExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AdditionExpr_1", c)) break;
    }
    return true;
  }

  // AdditionOp MultiplyExpr
  private static boolean AdditionExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditionExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AdditionOp(b, l + 1);
    r = r && MultiplyExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PLUS | MINUS | PLUS2 | PLUSPERCENT | MINUSPERCENT
  public static boolean AdditionOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditionOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITION_OP, "<addition op>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, PLUS2);
    if (!r) r = consumeToken(b, PLUSPERCENT);
    if (!r) r = consumeToken(b, MINUSPERCENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACKET Expr (COLON Expr)? RBRACKET
  public static boolean ArrayTypeStart(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayTypeStart")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && Expr(b, l + 1);
    r = r && ArrayTypeStart_2(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, ARRAY_TYPE_START, r);
    return r;
  }

  // (COLON Expr)?
  private static boolean ArrayTypeStart_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayTypeStart_2")) return false;
    ArrayTypeStart_2_0(b, l + 1);
    return true;
  }

  // COLON Expr
  private static boolean ArrayTypeStart_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayTypeStart_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && Expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COLON StringList
  public static boolean AsmClobbers(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmClobbers")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && StringList(b, l + 1);
    exit_section_(b, m, ASM_CLOBBERS, r);
    return r;
  }

  /* ********************************************************** */
  // ASM VOLATILE? LPAREN Expr AsmOutput? RPAREN
  public static boolean AsmExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmExpr")) return false;
    if (!nextTokenIs(b, ASM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASM);
    r = r && AsmExpr_1(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && Expr(b, l + 1);
    r = r && AsmExpr_4(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ASM_EXPR, r);
    return r;
  }

  // VOLATILE?
  private static boolean AsmExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmExpr_1")) return false;
    consumeToken(b, VOLATILE);
    return true;
  }

  // AsmOutput?
  private static boolean AsmExpr_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmExpr_4")) return false;
    AsmOutput(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // COLON AsmInputList AsmClobbers?
  public static boolean AsmInput(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInput")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && AsmInputList(b, l + 1);
    r = r && AsmInput_2(b, l + 1);
    exit_section_(b, m, ASM_INPUT, r);
    return r;
  }

  // AsmClobbers?
  private static boolean AsmInput_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInput_2")) return false;
    AsmClobbers(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LBRACKET ID RBRACKET STRINGLITERAL LPAREN Expr RPAREN
  public static boolean AsmInputItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputItem")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACKET, ID, RBRACKET);
    r = r && STRINGLITERAL(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && Expr(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ASM_INPUT_ITEM, r);
    return r;
  }

  /* ********************************************************** */
  // (AsmInputItem COMMA)* AsmInputItem
  public static boolean AsmInputList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputList")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AsmInputList_0(b, l + 1);
    r = r && AsmInputItem(b, l + 1);
    exit_section_(b, m, ASM_INPUT_LIST, r);
    return r;
  }

  // (AsmInputItem COMMA)*
  private static boolean AsmInputList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputList_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AsmInputList_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AsmInputList_0", c)) break;
    }
    return true;
  }

  // AsmInputItem COMMA
  private static boolean AsmInputList_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputList_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AsmInputItem(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COLON AsmOutputList AsmInput?
  public static boolean AsmOutput(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutput")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && AsmOutputList(b, l + 1);
    r = r && AsmOutput_2(b, l + 1);
    exit_section_(b, m, ASM_OUTPUT, r);
    return r;
  }

  // AsmInput?
  private static boolean AsmOutput_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutput_2")) return false;
    AsmInput(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LBRACKET ID RBRACKET STRINGLITERAL LPAREN (MINUSRARROW TypeExpr | ID) RPAREN
  public static boolean AsmOutputItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputItem")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACKET, ID, RBRACKET);
    r = r && STRINGLITERAL(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && AsmOutputItem_5(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ASM_OUTPUT_ITEM, r);
    return r;
  }

  // MINUSRARROW TypeExpr | ID
  private static boolean AsmOutputItem_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputItem_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AsmOutputItem_5_0(b, l + 1);
    if (!r) r = consumeToken(b, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  // MINUSRARROW TypeExpr
  private static boolean AsmOutputItem_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputItem_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MINUSRARROW);
    r = r && TypeExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (AsmOutputItem COMMA)* AsmOutputItem?
  public static boolean AsmOutputList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASM_OUTPUT_LIST, "<asm output list>");
    r = AsmOutputList_0(b, l + 1);
    r = r && AsmOutputList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AsmOutputItem COMMA)*
  private static boolean AsmOutputList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputList_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AsmOutputList_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AsmOutputList_0", c)) break;
    }
    return true;
  }

  // AsmOutputItem COMMA
  private static boolean AsmOutputList_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputList_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AsmOutputItem(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // AsmOutputItem?
  private static boolean AsmOutputList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputList_1")) return false;
    AsmOutputItem(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // Expr (AssignOp Expr)?
  public static boolean AssignExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_EXPR, "<assign expr>");
    r = Expr(b, l + 1);
    r = r && AssignExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AssignOp Expr)?
  private static boolean AssignExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignExpr_1")) return false;
    AssignExpr_1_0(b, l + 1);
    return true;
  }

  // AssignOp Expr
  private static boolean AssignExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AssignOp(b, l + 1);
    r = r && Expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ASTERISKEQUAL
  //      | SLASHEQUAL
  //      | PERCENTEQUAL
  //      | PLUSEQUAL
  //      | MINUSEQUAL
  //      | LARROW2EQUAL
  //      | RARROW2EQUAL
  //      | AMPERSANDEQUAL
  //      | CARETEQUAL
  //      | PIPEEQUAL
  //      | ASTERISKPERCENTEQUAL
  //      | PLUSPERCENTEQUAL
  //      | MINUSPERCENTEQUAL
  //      | EQUAL
  public static boolean AssignOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_OP, "<assign op>");
    r = consumeToken(b, ASTERISKEQUAL);
    if (!r) r = consumeToken(b, SLASHEQUAL);
    if (!r) r = consumeToken(b, PERCENTEQUAL);
    if (!r) r = consumeToken(b, PLUSEQUAL);
    if (!r) r = consumeToken(b, MINUSEQUAL);
    if (!r) r = consumeToken(b, LARROW2EQUAL);
    if (!r) r = consumeToken(b, RARROW2EQUAL);
    if (!r) r = consumeToken(b, AMPERSANDEQUAL);
    if (!r) r = consumeToken(b, CARETEQUAL);
    if (!r) r = consumeToken(b, PIPEEQUAL);
    if (!r) r = consumeToken(b, ASTERISKPERCENTEQUAL);
    if (!r) r = consumeToken(b, PLUSPERCENTEQUAL);
    if (!r) r = consumeToken(b, MINUSPERCENTEQUAL);
    if (!r) r = consumeToken(b, EQUAL);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // AdditionExpr (BitShiftOp AdditionExpr)*
  public static boolean BitShiftExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitShiftExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BIT_SHIFT_EXPR, "<bit shift expr>");
    r = AdditionExpr(b, l + 1);
    r = r && BitShiftExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (BitShiftOp AdditionExpr)*
  private static boolean BitShiftExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitShiftExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!BitShiftExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "BitShiftExpr_1", c)) break;
    }
    return true;
  }

  // BitShiftOp AdditionExpr
  private static boolean BitShiftExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitShiftExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BitShiftOp(b, l + 1);
    r = r && AdditionExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LARROW2 | RARROW2
  public static boolean BitShiftOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitShiftOp")) return false;
    if (!nextTokenIs(b, "<bit shift op>", LARROW2, RARROW2)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BIT_SHIFT_OP, "<bit shift op>");
    r = consumeToken(b, LARROW2);
    if (!r) r = consumeToken(b, RARROW2);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BitShiftExpr (BitwiseOp BitShiftExpr)*
  public static boolean BitwiseExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitwiseExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BITWISE_EXPR, "<bitwise expr>");
    r = BitShiftExpr(b, l + 1);
    r = r && BitwiseExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (BitwiseOp BitShiftExpr)*
  private static boolean BitwiseExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitwiseExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!BitwiseExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "BitwiseExpr_1", c)) break;
    }
    return true;
  }

  // BitwiseOp BitShiftExpr
  private static boolean BitwiseExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitwiseExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BitwiseOp(b, l + 1);
    r = r && BitShiftExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // AMPERSAND | CARET | PIPE | orelse | catch Payload?
  public static boolean BitwiseOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitwiseOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BITWISE_OP, "<bitwise op>");
    r = consumeToken(b, AMPERSAND);
    if (!r) r = consumeToken(b, CARET);
    if (!r) r = consumeToken(b, PIPE);
    if (!r) r = consumeToken(b, ORELSE);
    if (!r) r = BitwiseOp_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // catch Payload?
  private static boolean BitwiseOp_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitwiseOp_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CATCH);
    r = r && BitwiseOp_4_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Payload?
  private static boolean BitwiseOp_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BitwiseOp_4_1")) return false;
    Payload(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LBRACE Statement* RBRACE
  public static boolean Block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && Block_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // Statement*
  private static boolean Block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Block_1", c)) break;
    }
    return true;
  }
